# bazel-rulesjs-repro

./: .tool-versions  BUILD.bazel  WORKSPACE.bazel  a.ts  package-lock.json  package.json
lib/: BUILD.bazel  b.ts
proto/: BUILD.bazel  myproto.proto
