load("@npm//@bazel/esbuild:index.bzl", "esbuild")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

exports_files(["tsconfig.json"], visibility = ["//visibility:public"])

ts_library(
    name = "a",
    srcs = ["a.ts"],
    deps = ["//lib:b"],
)

esbuild(
    name = "bundle",
    entry_point = "a.ts",
    deps = [":a"],
    tool = select({
        "@bazel_tools//src/conditions:darwin": "@esbuild_darwin//:bin/esbuild",
        "@bazel_tools//src/conditions:windows": "@esbuild_windows//:esbuild.exe",
        "@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild",
    }),
)
